--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   </style>
   </head>
   <body background="https://shorturl.at/dGMT4">
+	  <div>
    <img src="nick1.jpeg" class="img-fluid" alt="...">
-
+	  </div>
+	<br>
 	<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 	<div class="carousel-inner">
 	<div class="carousel-item active">
