--- a/index.html
+++ b/index.html
@@ -15,41 +15,29 @@
   </head>
   <body background="https://shorturl.at/dGMT4">
   <img src="nick1.jpeg" class="img-fluid" alt="...">
-  <header>
-	<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-	<div class="carousel-inner">
-	<div class="carousel-item active">
-	<img src="nick2.jpg" class="d-block w-100" alt="">
-	</div>
-	<div class="carousel-item">
-	<img src="nick3.jpg" class="d-block w-100" alt="">
-	</div>
-	<div class="carousel-item">
-	<img src="nick4.jpeg" class="d-block w-100" alt="">
-	</div>
-	</div>
-	<br>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	<span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-	<span class="carousel-control-next-icon" aria-hidden="true"></span>
-	<span class="visually-hidden">Next</span>
-	</button>
-	</div>
-
-	<br>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	<span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-	<span class="carousel-control-next-icon" aria-hidden="true"></span>
-	<span class="visually-hidden">Next</span>
-	</button>
-	</div>
-	</header>
+  <br>
+	  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+	  <div class="carousel-inner">
+	  <div class="carousel-item active">
+	  <img src="nick1.jpg" class="d-block w-100" alt="...">
+	  </div>
+	  <div class="carousel-item">
+	  <img src="nick2.jpg" class="d-block w-100" alt="...">
+	  </div>
+	  <div class="carousel-item">
+	  <img src="nick3.jpeg" class="d-block w-100" alt="...">
+	  </div>
+	  </div>
+	  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	  <span class="visually-hidden">Previous</span>
+	  </button>
+	  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	  <span class="visually-hidden">Next</span>
+	  </button>
+	  </div>
+	
 <br>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
